렌트카 작업환경 셋팅

--- a/index.html
+++ b/index.html
@@ -5,15 +5,16 @@
     <meta charset="utf-8" />
   </head>
   <body>
+    <!-- ing 진행중, end 완료 -->
     <div class="wrapper">
       <header class="header">
-        <h1>프로젝트 이름</h1>
+        <h1><프로젝트이름> 퍼블리싱 현황</h1>
         <div class="top clear">
           <ul>
             <li>구분 :</li>
             <li><span class="state r"></span></li>
             <li>반응형</li>
-            <li><span class="state w"></span></li>
+            <li><span class="state m"></span></li>
             <li>WEB</li>
             <li><span class="state m"></span></li>
             <li>모바일&nbsp;&nbsp;&nbsp;/</li>
@@ -37,7 +38,7 @@
               <th>페이지</th>
               <th>파일명</th>
               <th>제작일</th>
-              <!-- <th>종료일</th> -->
+              <th>종료일</th>
               <th>웹표준</th>
               <th>호환성</th>
               <th>웹접근성</th>
@@ -49,9 +50,8 @@
           <tbody>
             <tr class="list">
               <td>스타일가이드</td>
-              <td><a href="_blank" target="_blank">.html</a></td>
+              <td><a href="./pages/style.html" target="_blank">style.html</a></td>
               <td>2024.00.00</td>
-              <!-- <td>2024.00.00</td> -->
               <td>x</td>
               <td>x</td>
               <td>x</td>
@@ -63,9 +63,8 @@
             </tr>
             <tr class="list">
               <td>MAIN</td>
-              <td><a href=".html" target="_blank">.html</a></td>
+              <td><a href="" target="_blank">.html</a></td>
               <td>2024.00.00</td>
-              <!-- <td>2024.00.00</td> -->
               <td>x</td>
               <td>x</td>
               <td>x</td>
@@ -80,11 +79,10 @@
             </tr>
             <tr class="list">
               <td>서브페이지 이름</td>
-              <td><a href="_blank" target="_blank">.html</a></td>
+              <td><a href="" target="_blank">.html</a></td>
               <td>2024.00.00</td>
-              <!-- <td>2024.00.00</td> -->
-              <td>x</td>
-              <td>x</td>
+              <td>o</td>
+              <td>o</td>
               <td>x</td>
               <td><span class="state m"></span></td>
               <td><span class="state ing"></span></td>
