파일 이름 수정

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!-- ing 진행중, end 완료 -->
     <div class="wrapper">
       <header class="header">
-        <h1><프로젝트이름> 퍼블리싱 현황</h1>
+        <h1><3legant E-Commerce>퍼블리싱 현황</h1>
         <div class="top clear">
           <ul>
             <li>구분 :</li>
@@ -50,7 +50,9 @@
           <tbody>
             <tr class="list">
               <td>스타일가이드</td>
-              <td><a href="./pages/style.html" target="_blank">style.html</a></td>
+              <td>
+                <a href="./pages/style.html" target="_blank">style.html</a>
+              </td>
               <td>2024.00.00</td>
               <td>x</td>
               <td>x</td>
