가이드 환경 셋팅

--- a/pages/style.html
+++ b/pages/style.html
@@ -5,12 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>스타일가이드</title>
     <link rel="stylesheet" href="../css/style.css" />
+    <link rel="stylesheet" href="../css/guide.css" />
   </head>
   <body>
     <header class="header">
       <div class="header__inner"></div>
     </header>
-    <main>본문삽입</main>
+    <main>
+      <details name="guide">
+        <summary>기타 가이드</summary>
+        <div>
+          <h2>가이드</h2>
+        </div>
+      </details>
+    </main>
     <footer class="footer"></footer>
   </body>
 </html>
