상단 바 네가지 타입 작업

--- a/pages/style.html
+++ b/pages/style.html
@@ -12,10 +12,49 @@
       <div class="header__inner"></div>
     </header>
     <main>
-      <details name="guide">
-        <summary>기타 가이드</summary>
+      <details name="guide" open>
+        <summary>Notification Bar 가이드</summary>
         <div>
-          <h2>가이드</h2>
+          <h2>base</h2>
+          <div class="notification base">
+            <div class="notification__center ico1">
+              <p>30% off storewide — Limited time!</p>
+              <a href="#" class="arrow1">Shop Now</a>
+            </div>
+            <div class="notification__right">
+              <button class="btn-close btn ico1"></button>
+            </div>
+          </div>
+          <h2>black</h2>
+          <div class="notification black">
+            <div class="notification__center ico2">
+              <p>30% off storewide — Limited time!</p>
+              <a href="#" class="arrow2">Shop Now</a>
+            </div>
+            <div class="notification__right">
+              <button class="btn-close btn ico1"></button>
+            </div>
+          </div>
+          <h2>green</h2>
+          <div class="notification green">
+            <div class="notification__center ico1">
+              <p>30% off storewide — Limited time!</p>
+              <a href="#" class="arrow3">Shop Now</a>
+            </div>
+            <div class="notification__right">
+              <button class="btn-close btn ico1"></button>
+            </div>
+          </div>
+          <h2>blue</h2>
+          <div class="notification blue">
+            <div class="notification__center ico2">
+              <p>30% off storewide — Limited time!</p>
+              <a href="#" class="arrow4">Shop Now</a>
+            </div>
+            <div class="notification__right">
+              <button class="btn-close btn ico2"></button>
+            </div>
+          </div>
         </div>
       </details>
     </main>
