header 중간 작업본

--- a/pages/style.html
+++ b/pages/style.html
@@ -8,11 +8,39 @@
     <link rel="stylesheet" href="../css/guide.css" />
   </head>
   <body>
+    <div class="notification base">
+      <div class="notification__center ico1">
+        <p>30% off storewide — Limited time!</p>
+        <a href="#" class="arrow1">Shop Now</a>
+      </div>
+      <div class="notification__right">
+        <button class="btn-close btn ico1"></button>
+      </div>
+    </div>
     <header class="header">
-      <div class="header__inner"></div>
+      <div class="header__inner">
+        <button class="btn-sitemap only-mobile"></button>
+        <h1 class="logo">3legant.</h1>
+        <nav class="gnb">
+          <ul>
+            <li><a href="">Home</a></li>
+            <li><a href="">Shop</a></li>
+            <li><a href="">Product</a></li>
+            <li><a href="">Contact Us</a></li>
+          </ul>
+        </nav>
+        <div class="utillity">
+          <button class="btn-search"></button>
+          <a href="" class="btn-user"></a>
+          <div class="cart">
+            <a href="" class="cart-btn"></a>
+            <div class="cart-count"></div>
+          </div>
+        </div>
+      </div>
     </header>
     <main>
-      <details name="guide" open>
+      <details name="guide">
         <summary>Notification Bar 가이드</summary>
         <div>
           <h2>base</h2>
